--- a/index.html
+++ b/index.html
@@ -107,203 +107,6 @@
         </div>
     </main>
 
-    <script>
-        // Utiliser process.env pour accéder aux variables d'environnement (Netlify)
-        const firebaseConfig = {
-            apiKey: window.FIREBASE_API_KEY,
-            authDomain: window.FIREBASE_AUTH_DOMAIN,
-            databaseURL: window.FIREBASE_DATABASE_URL,
-            projectId: window.FIREBASE_PROJECT_ID,
-            storageBucket: window.FIREBASE_STORAGE_BUCKET,
-            messagingSenderId: window.FIREBASE_MESSAGING_SENDER_ID,
-            appId: window.FIREBASE_APP_ID,
-            measurementId: window.FIREBASE_MEASUREMENT_ID
-        };
-
-        // Fonction asynchrone pour initialiser Firebase
-        async function initializeFirebase() {
-            try {
-                firebase.initializeApp(firebaseConfig);
-                const db = firebase.database();
-
-                let currentUser = null;
-
-                document.addEventListener("DOMContentLoaded", () => {
-                    setTimeout(() => {
-                        document.getElementById("intro").style.display = "none";
-                        document.querySelector("main").style.display = "block";
-                    }, 3000);
-
-                    document.getElementById("identificationForm").addEventListener("submit", function(e) {
-                        e.preventDefault();
-                        const input = document.getElementById("username").value.trim();
-                        if (!input) return;
-
-                        if (input === "Yann69") {
-                            currentUser = "admin";
-                            document.getElementById("identificationZone").style.display = "none";
-                            document.getElementById("adminZone").style.display = "block";
-                            document.getElementById("exportZone").style.display = "block";
-                            loadAllPlayers(); // Charger tous les joueurs pour l'admin
-                        } else {
-                            currentUser = input;
-                            initPlayer(input); // Initialiser et afficher le tableau pour l'utilisateur
-                            document.getElementById("identificationZone").style.display = "none";
-                        }
-                    });
-                });
-
-                // Fonction pour charger tous les joueurs (admin)
-                function loadAllPlayers() {
-                    db.ref("joueurs").on("value", snapshot => { // Utiliser .on pour la synchronisation
-                        const joueurs = snapshot.val() || {};
-                        Object.keys(joueurs).forEach(joueur => renderTable(joueur, true));
-                    });
-                }
-
-                // Fonction pour initialiser et afficher le tableau pour un utilisateur spécifique
-                function initPlayer(joueur) {
-                    db.ref(`joueurs/${joueur}`).once("value", snapshot => {
-                        if (!snapshot.exists()) {
-                            db.ref(`joueurs/${joueur}`).set({});
-                        }
-                        renderTable(joueur, false);
-                    });
-                }
-
-                function renderTable(joueur, isAdmin) {
-                  const jours = ["J1", "J7", "J14", "J21", "J28", "J35", "J42", "J49"];
-                  const exercices = [
-                    "Aller-retour largeur",
-                    "Aller longueur",
-                    "Aller-retour longueur",
-                    "Aller-retour largeur avec lignes"
-                  ];
-                    const container = document.getElementById("tableContainer");
-                    const wrapper = document.createElement("div");
-                    const title = document.createElement("h2");
-                    title.textContent = joueur;
-                    wrapper.appendChild(title);
-                    const table = document.createElement("table");
-                    const thead = document.createElement("thead");
-                    const headerRow = document.createElement("tr");
-                    headerRow.innerHTML = `<th>Exercice</th>` + jours.map(j => `<th>${j}</th>`).join('') + `<th>Écart</th><th>%</th><th>Moyenne</th>`;
-                    thead.appendChild(headerRow);
-                    table.appendChild(thead);
-                    const tbody = document.createElement("tbody");
-                    exercices.forEach(ex => {
-                        const row = document.createElement("tr");
-                        const tdLabel = document.createElement("td");
-                        tdLabel.textContent = ex;
-                        row.appendChild(tdLabel);
-                        jours.forEach((j, i) => {
-                            const input = document.createElement("input");
-                            input.type = "number";
-                            input.step = "0.01";
-
-                            // Utiliser .on pour la synchronisation en temps réel
-                            db.ref(`joueurs/${joueur}/${ex}/j${i}`).on("value", snap => {
-                                input.value = snap.val() || "";
-                                updateRow(row); // Mettre à jour la ligne à chaque changement
-                            });
-
-                            input.oninput = () => {
-                                // Utiliser transaction pour éviter les conflits d'écriture
-                                db.ref(`joueurs/${joueur}/${ex}/j${i}`).transaction(currentValue => {
-                                    const newValue = parseFloat(input.value);
-                                    return isNaN(newValue) ? null : newValue;
-                                });
-                            };
-
-                            const td = document.createElement("td");
-                            td.appendChild(input);
-                            row.appendChild(td);
-                        });
-                        const tdEcart = document.createElement("td");
-                        const tdPct = document.createElement("td");
-                        const tdMoy = document.createElement("td");
-                        tdEcart.className = "diff";
-                        tdPct.className = "pct";
-                        tdMoy.className = "moyenne";
-                        row.appendChild(tdEcart);
-                        row.appendChild(tdPct);
-                        row.appendChild(tdMoy);
-                        tbody.appendChild(row);
-                        updateRow(row)
-                    });
-                    table.appendChild(tbody);
-                    wrapper.appendChild(table);
-                    container.appendChild(wrapper);
-                }
-
-                function updateRow(row) {
-                    const inputs = row.querySelectorAll("input");
-                    const values = Array.from(inputs).map(i => parseFloat(i.value)).filter(v => !isNaN(v));
-                    const diffs = row.querySelector(".diff");
-                    const pcts = row.querySelector(".pct");
-                    const moyTd = row.querySelector(".moyenne");
-
-                    if (values.length >= 2) {
-                        const prev = values[values.length - 2];
-                        const last = values[values.length - 1];
-                        const diff = prev - last;
-                        const pct = (diff / prev) * 100;
-
-                        diffs.textContent = diff.toFixed(2);
-                        pcts.textContent = pct.toFixed(1) + "%";
-                    } else {
-                        diffs.textContent = "-";
-                        pcts.textContent = "-";
-                    }
-
-                    const moyenne = values.reduce((a, b) => a + b, 0) / values.length;
-                    moyTd.textContent = isNaN(moyenne) ? "-" : moyenne.toFixed(2);
-                }
-
-                function addPlayer() {
-                    const name = document.getElementById("newPlayer").value.trim();
-                    if (name) {
-                        db.ref(`joueurs/${name}`).set({});
-                        renderTable(name, true);
-                    }
-                }
-
-                function removePlayer() {
-                    const name = prompt("Quel joueur voulez-vous supprimer ?");
-                    if (name) {
-                        db.ref(`joueurs/${name}`).remove();
-                        location.reload();
-                    }
-                }
-
-                function exportCSV() {
-                    let csv = "Joueur,Exercice,J1,J7,J14,J21,J28,J35,J42,J49,Écart,% de gain,Moyenne\n";
-                    const tables = document.querySelectorAll("table");
-                    tables.forEach(table => {
-                        const joueur = table.previousSibling.textContent;
-                        table.querySelectorAll("tbody tr").forEach(row => {
-                            const cells = row.querySelectorAll("td");
-                            const data = Array.from(cells).map(cell => cell.querySelector("input")?.value || cell.textContent);
-                            csv += [joueur, ...data].join(",") + "\n";
-                        });
-                    });
-
-                    const blob = new Blob([csv], {type: 'text/csv'});
-                    const url = URL.createObjectURL(blob);
-                    const a = document.createElement('a');
-                    a.href = url;
-                    a.download = `perf_samo_tennis.csv`;
-                    a.click();
-                }
-            } catch (error) {
-                console.error("Erreur lors de l'initialisation de l'application:", error);
-            }
-        }
-
-        document.addEventListener("DOMContentLoaded", () => {
-            // ... votre code
-            initializeFirebase();
-        });
-    </script>
+    <script src="./script.js"></script>
 </body>
 </html>
